--- a/portfolio.html
+++ b/portfolio.html
@@ -22,10 +22,10 @@
         <section>
             <h2>Karya Kami</h2>
             <article>
-                <h3>Aplikasi Pemesanan Tiket</h3>
+                <h3>Aplikasi Pemesanan Tiket Transportasi</h3>
                 <img src="assets/images/app1.jpg" alt="Screenshot Aplikasi
 Pemesanan Tiket">
-                <p>Aplikasi berbasis web untuk memesan tiket transportasi.</p>
+                <p>Aplikasi berbasis web untuk memesan tiket transportasi umum.</p>
             </article>
             <article>
                 <h3>Website Edukasi Interaktif</h3>
