Co-authored-by: juhar ananda <jh4r@users.noreply.github.com> Co-authored-by: amandavln <amandavln@users.noreply.github.com>

--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <header>
-        <h1>Kontak</h1>
+        <h1>Contact</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Beranda</a></li>
