--- a/portfolio.html
+++ b/portfolio.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <header>
-        <h1>Portofolio</h1>
+        <h1>Portofolio Kelompok Kami</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Beranda</a></li>
