ubah jadi profil kelompok

--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
     </header>
     <main>
         <section>
-            <h2>Profil Singkat</h2>
+            <h2>Profil Kelompok Kami</h2>
             <p>Kami adalah tim pengembang web yang berfokus pada pembuatan aplikasi modern dan responsif.</p>
             <img src="assets/images/team.jpg" alt="Foto Tim">
         </section>
