--- a/index.html
+++ b/index.html
@@ -20,14 +20,12 @@
 <main>
     <section>
         <h2>Pengantar</h2>
-        <p>Selamat datang di situs ini. Anda dapat menelusuri beragam
-informasi dan proyek di sini.</p>
+        <p>Selamat datang di situs ini. Anda dapat menelusuri beragam informasi dan proyek di sini.</p>
     </section>
 
     <section>
         <h2>Highlight</h2>
-        <p>Bagian ini dapat memuat konten unggulan, gambar slider, atau
-informasi penting lainnya.</p>
+        <p>Bagian ini dapat memuat konten unggulan, gambar slider, atau informasi penting lainnya.</p>
     </section>
 </main>
 <footer>
