--- a/portfolio.html
+++ b/portfolio.html
@@ -23,8 +23,7 @@
             <h2>Karya Kami</h2>
             <article>
                 <h3>Aplikasi Pemesanan Tiket Transportasi</h3>
-                <img src="assets/images/app1.jpg" alt="Screenshot Aplikasi
-Pemesanan Tiket">
+                <img src="assets/images/app1.jpg" alt="Screenshot Aplikasi Pemesanan Tiket">
                 <p>Aplikasi berbasis web untuk memesan tiket transportasi umum.</p>
             </article>
             <article>
