--- a/contact.html
+++ b/contact.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact - My Website Project</title>
+    <title>Kontak - My Website Project</title>
 </head>
 <body>
     <header>
-        <h1>Contact</h1>
+        <h1>Kontak</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Beranda</a></li>
