--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Selamat Datang - My Website Project</title>
+    <title> Welcome - My Website Project</title>
 </head>
 <body>
     <header>
-        <h1>Selamat Datang di My Website Project</h1>
+        <h1> Welcome My Website Project</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Beranda</a></li>
